--- a/AddressViz/src/main/webapp/css/style.css
+++ b/AddressViz/src/main/webapp/css/style.css
@@ -1,38 +1,105 @@
+html {
+    font-family: "Verdana";
+}
+
 body {
+    padding-left: 10%;
+    padding-right: 10%;
+    margin: 0px;
+    background: white;
+}
+
+.grid-container {
     display: grid;
-    grid-template-areas: "header header" "section main" "footer footer";
-    grid-template-rows: 80px 1fr 70px;
-    grid-template-columns: 20% 1fr;
-    grid-row-gap: 10px;
-    grid-column-gap: 10px;
-    height: 100vh;
-    margin: 0;
+    grid-template-areas:
+        'header header header header header header'
+        'nav login login login login login'
+        'nav map-buttons map-buttons map-buttons map-buttons map-buttons'
+        'nav map-names map-area map-area map-area map-area'
+        'nav add-address update-address update-address update-address update-address'
+        'footer footer footer footer footer footer';
+    grid-gap: 1px;
+    grid-template-columns: 1fr auto 4fr;
+    background-color: black;
+    height: 100%;
+    width: 100%;
 }
 
-header {
+ul {
+    list-style-type: none;
+    padding: 0px;
+    margin: 10px 5px;
+    border: 1px solid #555;
+}
+
+li {
+    text-align: center;
+    border-bottom: 1px solid rgb(0, 0, 0);
+    background: #444668;
+}
+
+li a {
+    display: block;
+    color: #000;
+    padding: 4% 8%;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #555;
+    color: white;
+}
+
+#navigation {
+    background: #cccccc;
+    grid-area: nav;
+}
+
+#add-address {
+    grid-area: add-address;
+}
+
+#update-address {
+    grid-area: update-address;
+}
+
+#header {
+    text-align: center;
+    font-size: 32px;
+    background: lightskyblue;
     grid-area: header;
-    padding: 1.2em;
-    color: orange;
-    background: silver;
 }
 
-section {
-    grid-area: section;
-}
-
-#main {
-    grid-area: main;
-}
-
-footer {
+#footer {
+    text-align: center;
+    background: lightskyblue;
     grid-area: footer;
-    padding: 1.2em;
-    color: silver;
-    background: orange;
+}
+
+#login {
+    grid-area: login;
+}
+
+#map-buttons {
+    grid-area: map-buttons;
+}
+
+#map-area {
+    grid-area: map-area;
+    background: lightblue;
+}
+
+#map-names {
+    background: rgb(135, 169, 180);
+    grid-area: map-names;
+}
+
+.grid-container > div {
+    background: #dddddd;
+    padding: 1%;
 }
 
 #map {
-    height: 86%;
-    width: 96%;
-    padding: 0; margin: 0;
+    height: 640px;
+    width: 100%;
 }
